tests/NormalTests/paczka1/small_fuzzy/60406882.err
Error in line 2: n25DPVKtZ A129 19,2
Error in line 5: n25DPVKtZ A648 61,0
Error in line 16: LKuJrB4qJNf A892 72,61
